samples/_failures_safe/1761667545_25df58_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63afb4e4.c: In function ‘main’:
./samples/SAFE/__tmp_63afb4e4.c:150:44: error: expected ‘)’ at end of input
  150 |                 if (multiply_matrices(&mat1
      |                                      ~     ^
      |                                            )
./samples/SAFE/__tmp_63afb4e4.c:150:21: error: too few arguments to function ‘multiply_matrices’
  150 |                 if (multiply_matrices(&mat1
      |                     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_63afb4e4.c:79:5: note: declared here
   79 | int multiply_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_63afb4e4.c:150:17: error: expected declaration or statement at end of input
  150 |                 if (multiply_matrices(&mat1
      |                 ^~
./samples/SAFE/__tmp_63afb4e4.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_63afb4e4.c:150:17: error: expected declaration or statement at end of input
